@startuml

title __Calculator's Class Diagram__\n

  namespace App {
    class App {
        {static} - CANVAS_HEIGHT : double
        {static} - CANVAS_WIDTH : double
        - isDeletable : boolean
        - isFirstOp : boolean
        - isFirstPoint : boolean
        - isPriorEquals : boolean
        - opBuffer : char
        - operand1 : double
        - result : String
        {static} + main()
        + mouseClicked()
        + run()
        - initBooleans()
        - isOperator()
    }
  }
  

  namespace CalculatorLayout {
    class CalculatorLayout {
        {static} - MAIN_FONT : String
        {static} - MARGIN : int
        {static} - MEMO_FONT : String
        {static} - NCOLS : int
        {static} - NROWS : int
        {static} - labels : char[]
        - mainDisplay : GLabel
        - memoBuffer : StringBuilder
        - memoDisplay : GLabel
        - numBuffer : StringBuilder
        + CalculatorLayout()
        + clearMainDisplay()
        + clearMemoBuffer()
        + clearMemoDisplay()
        + clearMemoElement()
        + clearNumBuffer()
        + deleteOneCharacter()
        + getMainDisplay()
        + negateElement()
        + setMainDisplay()
        + setMainDisplay()
        + setMemoDisplay()
        + setMemoDisplay()
    }
  }
  

  namespace MathHandler {
    class MathHandler {
        {static} + add()
        {static} + add()
        {static} + cos()
        {static} + divide()
        {static} + divide()
        {static} + evaluate()
        {static} + evaluate()
        {static} + exponent()
        {static} + multiply()
        {static} + multiply()
        {static} + sin()
        {static} + subtract()
        {static} + subtract()
        {static} + tan()
    }
  }
  

  namespace MyButton {
    class MyButton {
        {static} - FONT : String
        - key : GRect
        - keyText : GLabel
        + MyButton()
        + getText()
        + setText()
        - getCenterX()
        - getCenterY()
    }
  }
  

  App -up-|> acm.program.GraphicsProgram
  App o-- CalculatorLayout : calculatorLayout
  CalculatorLayout -up-|> acm.graphics.GCompound
  MyButton -up-|> acm.graphics.GCompound


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
